# IntuneBuddy

./: .gitignore  IntuneBuddy.py  LICENSE  README.md  file_index.json  requirements.txt  setup.cfg  vector.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
chroma_db/: chroma.sqlite3
chroma_db/565ff4c8-ec1c-48f5-850e-8b36ae041fe3/: index_metadata.pickle
src/IntuneBuddy/: IntuneBuddy.py  config.py  utils.py  vector.py
tests/: test_config.py  test_utils.py
