[metadata]
name = IntuneBuddy
version = 0.0.1
author = Tobias Almén
author_email = almenscorner@outlook.com
description = Chatbot for Intune documentation 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/almenscorner/IntuneBuddy
project_urls =
    Bug Tracker = https://github.com/almenscorner/IntuneBuddy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    langchain_chroma==0.2.2
    langchain_core==0.3.51
    langchain_ollama==0.3.1
    langchain_text_splitters==0.3.8
    prompt_toolkit==3.0.50
    rich==14.0.0

[options.entry_points]
console_scripts =
    Intune-buddy=IntuneBuddy.IntuneBuddy:main